--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,3 +40,20 @@ body {
 p, h1, h2{
   color: white;
 }
+
+.scroll-overflow {
+  overflow-x: auto;
+  /* white-space: nowrap; */
+}
+
+.scroll {
+  white-space: nowrap; /* [1] */
+  overflow-x: auto; /* [2] */
+  -webkit-overflow-scrolling: touch; /* [3] */
+  -ms-overflow-style: -ms-autohiding-scrollbar; /* [4] */ 
+  flex-wrap: nowrap;
+}
+
+/* [5] */
+.scroll::-webkit-scrollbar {
+  display: none; }
